# backend/internal/domain/user_profile.go
@@ -3,11 +3,11 @@ package domain
 import "time"
 
 type UserProfile struct {
-	ID        int64  `json:"id"`
-	UserID    int64  `json:"user_id"`
-	Name      string `json:"name"`
-	Username  string `json:"username"`
-	IconPath  *string `json:"icon_path"`
+	ID        int64     `json:"id"`
+	UserID    int64     `json:"user_id"`
+	Name      string    `json:"name"`
+	Username  string    `json:"username"`
+	IconPath  *string   `json:"icon_path"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
